[gd_scene load_steps=4 format=3 uid="uid://15wfdv8vsmf1"]

[ext_resource type="Script" path="res://pistol/gun.gd" id="1_e50lc"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="2_7gbhj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wbj2i"]
radius = 503.838

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_e50lc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wbj2i")

[node name="WeaponPivot" type="Marker2D" parent="."]
rotation = 0.0393488

[node name="Pistol" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(93.046, -0.660819)
rotation = -0.042029
scale = Vector2(0.885714, 0.885714)
texture = ExtResource("2_7gbhj")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
position = Vector2(27.2811, -10.0219)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="ShootingTimer" to="." method="_on_timer_timeout"]
